# Lumen

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile
benches/: Cargo.toml
benches/benches/: perf.rs
benches/src/: lib.rs
crates/lumen/: Cargo.toml  README.md
crates/lumen-agent/: Cargo.toml  README.md
crates/lumen-agent/src/: base64.rs  lib.rs
crates/lumen-agent/tests/: autorepair.rs  autowait.rs  conformance.rs  fuzz_lite.rs  introspection_f4.rs  method_batch.rs  perf_logs.rs
crates/lumen-cli/: Cargo.toml  README.md
crates/lumen-cli/src/: agent.rs  dev.rs  dist.rs  hotpatch.rs  lib.rs  main.rs  proto.rs
crates/lumen-cli/tests/: agent_cli.rs  cli.rs  dist.rs  hot_reload.rs  hotpatch.rs  tier2_driver.rs
crates/lumen-core/: Cargo.toml  diagnostics.md
crates/lumen-core/schema/: semantics-1.json
crates/lumen-core/src/: binding.rs  color.rs  diagnostics.rs  events.rs  geometry.rs  gesture.rs  identity.rs  lib.rs  registry.rs  semantics.rs  state.rs  tasks.rs  tree.rs
crates/lumen-core/tests/: crash_hook.rs  gesture.rs
crates/lumen-layout/: Cargo.toml  README.md
crates/lumen-layout/src/: lib.rs  style.rs  tree.rs
crates/lumen-layout/tests/: layout_fixtures.rs
crates/lumen-macros/: Cargo.toml
crates/lumen-macros/src/: lib.rs
crates/lumen-render/: Cargo.toml  README.md
crates/lumen-render/src/: analysis.rs  atlas.rs  canvas.rs  cpu.rs  diff.rs  display_list.rs  gpu.rs  gradient.rs  image.rs  lib.rs  media.rs  scene.rs  svg.rs
crates/lumen-render/tests/: backdrop.rs  cpu_goldens.rs  cpu_vs_gpu.rs  damage_equivalence.rs  design_contrast.rs  diff_harness.rs  fuzz_lite.rs  gpu_glyph_run.rs  gpu_parity.rs  gpu_refraction.rs  media.rs  probe.rs  scene.rs  svg.rs
crates/lumen-shell/: Cargo.toml  README.md
crates/lumen-shell-android/: Cargo.toml
crates/lumen-shell-android/android/: AndroidManifest.xml
crates/lumen-shell-android/src/: imp.rs  lib.rs
crates/lumen-shell-android/tests/: device_golden.rs  lss_smoke.rs  tier1_reload.rs
crates/lumen-shell-ios/: Cargo.toml
crates/lumen-shell-ios/ios/: AppDelegate.m  Info.plist  README.md
crates/lumen-shell-ios/src/: lib.rs
crates/lumen-shell-ios/tests/: render_core.rs
crates/lumen-shell-web/: Cargo.toml
crates/lumen-shell-web/src/: lib.rs
crates/lumen-shell/src/: lib.rs
crates/lumen-style/: Cargo.toml  README.md
crates/lumen-style/src/: anim.rs  ast.rs  lexer.rs  lib.rs  motion.rs  parser.rs  properties.rs  style.rs
crates/lumen-style/tests/: anim.rs  e0103.rs  fuzz_lite.rs  lss.rs  motion.rs  relative_colors.rs  style.rs  themes_media.rs
crates/lumen-test/: Cargo.toml  README.md
crates/lumen-test/schema/: trace-1.json
crates/lumen-test/src/: lib.rs  runtime.rs  session.rs  trace.rs
crates/lumen-test/tests/: attr_macro.rs  expect_retry.rs  full_surface.rs  golden_diff.rs  harness_selftest.rs  session_export.rs  traces.rs
crates/lumen-text/: Cargo.toml  README.md
crates/lumen-text/src/: editor.rs  lib.rs  richtext.rs
crates/lumen-text/tests/: editor_geometry.rs  fonts.rs  glyph_run_parity.rs  metrics.rs  rich_style.rs  richtext.rs  selection.rs  text_goldens.rs  weight.rs
crates/lumen-widgets/: Cargo.toml  README.md
crates/lumen-widgets/src/: a11y.rs  accordion.rs  app.rs  asset.rs  audit.rs  boundary.rs  button.rs  charts.rs  check_box.rs  color_picker.rs  combobox.rs  container.rs  design.rs  element.rs  feedback.rs  file_picker.rs  forms.rs  grid.rs  i18n.rs  label.rs  lib.rs  macros.rs  markdown.rs  misc_w2.rs  motion.rs  nav.rs  pick_list.rs  popover.rs  progress_bar.rs  radio.rs  range_slider.rs  richdoc.rs  rule.rs  scrollable.rs  search_field.rs  shader.rs  sheet.rs  slider.rs  space.rs  system.rs  (+13 more)
crates/lumen-widgets/tests/: a11y.rs  animation.rs  asset.rs  assets_m1.rs  binding.rs  canvas.rs  checkpoint.rs  coherence.rs  copy_forward.rs  cx_memo_effect.rs  damage.rs  data_layer.rs  design.rs  dpi.rs  fonts.rs  forms.rs  gpu_backend.rs  gpu_live_path.rs  handler_currency.rs  hardening.rs  hot_reload.rs  hover.rs  hover_memo.rs  i18n.rs  ink_clip.rs  inline_style.rs  keyed.rs  leaf_event.rs  leaf_widget.rs  lint.rs  lss_container.rs  lss_layout.rs  lss_media.rs  lss_nested.rs  lss_parts.rs  lss_states.rs  lss_text_color.rs  lss_transitions.rs  lss_typography.rs  lss_visual.rs  (+28 more)
crates/lumen/src/: lib.rs
crates/skills-smoke/: Cargo.toml
crates/skills-smoke/src/: lib.rs
crates/skills-smoke/tests/: skills.rs
examples/accordion/: Cargo.toml  app.lss
examples/accordion/examples/: win.rs
examples/accordion/src/: lib.rs  main.rs
examples/agent-gauntlet/: Cargo.toml
examples/agent-gauntlet-2/: Cargo.toml
examples/agent-gauntlet-2/src/: lib.rs
examples/agent-gauntlet-2/tests/: gauntlet.rs
examples/agent-gauntlet-media/: Cargo.toml
examples/agent-gauntlet-media/src/: lib.rs
examples/agent-gauntlet-media/tests/: gauntlet.rs
examples/agent-gauntlet-web/: Cargo.toml
examples/agent-gauntlet-web/src/: lib.rs
examples/agent-gauntlet-web/tests/: gauntlet.rs
examples/agent-gauntlet/src/: lib.rs
examples/agent-gauntlet/tests/: gauntlet.rs
examples/catalog/: Cargo.toml  app.lss
examples/catalog/examples/: win.rs
examples/catalog/src/: lib.rs  main.rs
examples/catalog/tests/: smoke.rs
examples/changelog/: Cargo.toml  app.lss
examples/changelog/examples/: win.rs
examples/changelog/src/: lib.rs  main.rs
examples/changelog/tests/: smoke.rs
examples/chart/: Cargo.toml  app.lss
examples/chart/examples/: win.rs
examples/chart/src/: lib.rs  main.rs
examples/chart/tests/: smoke.rs
examples/chrono-stopwatch/: Cargo.toml  README.md
examples/chrono-stopwatch/examples/: win.rs
examples/chrono-stopwatch/src/: lib.rs  main.rs
examples/chrono-stopwatch/tests/: contrast.rs  perf.rs
examples/clock/: Cargo.toml  app.lss
examples/clock/examples/: win.rs
examples/clock/src/: lib.rs  main.rs
examples/clock/tests/: clock.rs
examples/color_palette/: Cargo.toml  app.lss
examples/color_palette/src/: lib.rs  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: agent_json.rs  decode.rs  lss_parse.rs  selector.rs
(+345 files in other folders)
