# Lumen — AI-first cross-platform GUI framework.
# Virtual workspace manifest. Crate naming per 02-spec-core.md §1.
[workspace]
resolver = "2"
members = [
    "crates/lumen-core",
    "crates/lumen-layout",
    "crates/lumen-render",
    "crates/lumen-text",
    "crates/lumen-style",
    "crates/lumen-widgets",
    "crates/lumen-shell",
    "crates/lumen-test",
    "crates/lumen-agent",
    "crates/lumen-cli",
    "crates/lumen",
    "examples/hello",
    "examples/settings",
    "crates/fixtures/hot_a",
    "crates/fixtures/hot_b",
    "crates/fixtures/hot_c",
    "benches",
    "crates/lumen-shell-android",
    "examples/hello_android",
    "crates/lumen-shell-ios",
    "examples/hello_ios",
    "examples/settings_android",
    "examples/inspector",
    "examples/agent-gauntlet",
    "crates/lumen-shell-web",
    "examples/hello_web",
    "examples/agent-gauntlet-web",
    "examples/agent-gauntlet-media",
]

# Pre-1.0 lockstep version for the whole workspace (02 §11).
[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/lumen"
publish = false

# Every dependency version is pinned in exactly one place (ADR-003).
# Only the ADR-003 whitelist + dev-tooling may appear here.
[workspace.dependencies]
# internal crates
lumen-core = { path = "crates/lumen-core" }
lumen-layout = { path = "crates/lumen-layout" }
lumen-render = { path = "crates/lumen-render" }
lumen-text = { path = "crates/lumen-text" }
lumen-style = { path = "crates/lumen-style" }
lumen-widgets = { path = "crates/lumen-widgets" }
lumen-shell = { path = "crates/lumen-shell" }
lumen-test = { path = "crates/lumen-test" }
lumen-agent = { path = "crates/lumen-agent" }
lumen-cli = { path = "crates/lumen-cli" }
lumen-shell-android = { path = "crates/lumen-shell-android" }
lumen-shell-ios = { path = "crates/lumen-shell-ios" }
lumen-shell-web = { path = "crates/lumen-shell-web" }
lumen = { path = "crates/lumen" }

# whitelisted runtime deps (ADR-003) — added to crates as tasks need them
kurbo = "0.11"
taffy = "0.7"
# `default-features = false` drops fontique's `system` font-enumeration backend
# (windows/objc2/fontconfig) — Lumen only ever uses the bundled font
# (`system_fonts: false`, ADR-005), so this changes nothing on desktop and makes
# the text stack compile to wasm32.
parley = { version = "0.3", default-features = false, features = ["std"] }
swash = "0.2"
wgpu = "22"
winit = "0.30"
raw-window-handle = "0.6"
smol_str = "0.3"
bitflags = "2.6"
notify = "6"
libloading = "0.8"
tungstenite = "0.24"
# Mobile (M3). Pulled only when building for the respective target.
android-activity = "0.6"
ndk = "0.9"
log = "0.4"
android_logger = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-skia = "0.11"
accesskit = "0.17"

# whitelisted dev deps (ADR-003)
proptest = "1"
jsonschema = "0.26"
criterion = "0.5"

[profile.release]
# Deterministic CPU renderer is the contract (ADR-002); keep release builds
# reproducible and small for the <5 MB hello-world target.
lto = "thin"
codegen-units = 1
