[package]
name = "lumen-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
lumen-widgets = { workspace = true }
kurbo = { workspace = true }
serde_json = { workspace = true }
# Sync WebSocket so the non-Send app stays on the serving thread (ADR-003,
# ADR-018: tokio is only for the dev-server multiplexer, not this loop).
tungstenite = { workspace = true }
