[package]
name = "lumen-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "lumen_cli"
path = "src/lib.rs"

[[bin]]
name = "lumen"
path = "src/main.rs"
# Don't rustdoc the bin: its name collides with the `lumen` facade crate's docs.
doc = false

[dependencies]
serde_json = { workspace = true }
# Dev server: file watcher (ADR-003) + the framework for live reload.
notify = { workspace = true }
# Tier-2 hot patch: load freshly-built component cdylibs at runtime (ADR-012).
libloading = { workspace = true }
lumen = { workspace = true }
lumen-core = { workspace = true }
lumen-style = { workspace = true }
lumen-widgets = { workspace = true }
