[package]
name = "lumen-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }
bitflags = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
