[package]
name = "lumen-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
smol_str = { workspace = true, features = ["serde"] }
bitflags = { workspace = true }
serde = { workspace = true }
# Snapshot format is self-describing field-tagged JSON (ADR-011), so serde_json
# is a runtime dependency, not dev-only.
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
jsonschema = { workspace = true }
