[package]
name = "lumen-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
kurbo = { workspace = true }
# Layout engine behind the lumen-layout wrapper (ADR-004); no taffy types leak
# into this crate's public API.
taffy = { workspace = true }
