[package]
name = "lumen-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
kurbo = { workspace = true }
# CPU reference renderer (ADR-002). `png-format` provides PNG encode/decode for
# RgbaImage, avoiding the non-whitelisted `image` crate (see decision log).
tiny-skia = { workspace = true, features = ["png-format"] }
# GPU backend (ADR-001). Offscreen rendering needs no display; parity-tested
# against the CPU reference renderer (05 §4). Excluded on wasm — the web shell
# uses the CPU renderer (WebGPU would pull wasm-bindgen); the GPU/WebGPU path is
# a browser-only production presenter, not part of the deterministic core.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true }
