[package]
name = "lumen-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
kurbo = { workspace = true }
# Design-analysis reports serialize to JSON for the agent protocol (whitelisted,
# ADR-003).
serde = { workspace = true }
# CPU reference renderer (ADR-002). `png-format` provides PNG encode/decode for
# RgbaImage, avoiding the non-whitelisted `image` crate (see decision log).
tiny-skia = { workspace = true, features = ["png-format"] }
# GPU backend (ADR-001). Offscreen rendering needs no display; parity-tested
# against the CPU reference renderer (05 §4). Excluded on wasm — the web shell
# uses the CPU renderer (WebGPU would pull wasm-bindgen); the GPU/WebGPU path is
# a browser-only production presenter, not part of the deterministic core.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true }
# Path/stroke tessellation → GPU triangles (ADR-006, R1.3). GPU-only; the CPU
# reference renderer uses tiny-skia for paths.
lyon = { workspace = true }

[dev-dependencies]
# Golden JSON for the design-analysis tests.
serde_json = { workspace = true }
