[package]
name = "lumen-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
kurbo = { workspace = true }
# Design-analysis reports serialize to JSON for the agent protocol (whitelisted,
# ADR-003).
serde = { workspace = true }
# CPU reference renderer (ADR-002). `png-format` provides PNG encode/decode for
# RgbaImage, avoiding the non-whitelisted `image` crate (see decision log).
tiny-skia = { workspace = true, features = ["png-format"] }
# GPU backend (ADR-001). Offscreen rendering needs no display; parity-tested
# against the CPU reference renderer (05 §4). Excluded on wasm — the web shell
# uses the CPU renderer (WebGPU would pull wasm-bindgen); the GPU/WebGPU path is
# a browser-only production presenter, not part of the deterministic core.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Optional behind the `wgpu` feature (default-on). A CPU-only build can drop the
# whole GPU/tessellation stack with `--no-default-features`; tiny-skia (the CPU
# reference) is unconditional. Always target-gated off for wasm.
wgpu = { workspace = true, optional = true }
# Path/stroke tessellation → GPU triangles (ADR-006, R1.3). GPU-only; the CPU
# reference renderer uses tiny-skia for paths.
lyon = { workspace = true, optional = true }

[features]
# The GPU (`Wgpu`) backend. On by default; turn off for a CPU-only build. No
# effect on wasm (the deps are target-gated off there; the web shell uses CPU).
default = ["wgpu"]
wgpu = ["dep:wgpu", "dep:lyon"]

[dev-dependencies]
proptest = { workspace = true }
# Golden JSON for the design-analysis tests.
serde_json = { workspace = true }
