[package]
name = "lumen-shell-android"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "lumen_shell_android"

[dependencies]
lumen = { workspace = true }
lumen-core = { workspace = true }
lumen-render = { workspace = true }

[dev-dependencies]
kurbo = { workspace = true }

# Android-only: the native-activity glue, NativeWindow blit, and logging.
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true, features = ["native-activity"] }
ndk = { workspace = true }
log = { workspace = true }
android_logger = { workspace = true }
