[package]
name = "lumen-shell-ios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "lumen_shell_ios"

[dependencies]
lumen = { workspace = true }
lumen-core = { workspace = true }
lumen-render = { workspace = true }

[dev-dependencies]
kurbo = { workspace = true }
