[package]
name = "lumen-shell-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "lumen_shell_web"

[dependencies]
lumen = { workspace = true }
lumen-core = { workspace = true }
lumen-render = { workspace = true }
