[package]
name = "lumen-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
lumen-render = { workspace = true }
lumen-widgets = { workspace = true }
kurbo = { workspace = true }
# Desktop windowing + GPU surface presentation (ADR-001).
winit = { workspace = true }
wgpu = { workspace = true }
# Optional embedded agent endpoint (LUMEN_AGENT_ADDR): lets an AI observe and
# drive the *live* window over the same JSON-RPC the headless agent speaks.
lumen-agent = { workspace = true }
serde_json = { workspace = true }
