[package]
name = "lumen-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
lumen-render = { workspace = true }
# Direct path dep, defaults off (cargo ignores `default-features = false` on
# workspace-inherited deps): the shell forwards feature choices instead of
# forcing them, so the facade's lean profile (T.4) actually reaches
# lumen-widgets. The facade / direct consumers pick the tiers.
lumen-widgets = { path = "../lumen-widgets", default-features = false, features = ["wgpu"] }
kurbo = { workspace = true }
# Desktop windowing + GPU surface presentation (ADR-001).
winit = { workspace = true }
# P.3a (ADR-P1): OS clipboard — bridged to the portable Runtime clipboard.
arboard = { workspace = true }
# P.3b (ADR-P1): native file dialogs fulfilling SystemRequest::OpenFile.
rfd = { workspace = true }
# P.3c (ADR-P1): native menus. Attached on Windows (hwnd) / macOS (nsapp);
# on Linux muda is GTK-bound and winit has no menubar attachment point, so
# activation there is the portable accelerator path + agent verbs.
muda = { workspace = true }
# P.4: platform assistive-tech bridge — the semantic tree (already built for
# tests/agent) published to AT-SPI/UIA/NSAccessibility; AT actions come back
# through the event loop and route into the same input queue.
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
wgpu = { workspace = true }
# Embedded agent endpoint (LUMEN_AGENT_ADDR): lets an AI observe and drive the
# *live* window over the same JSON-RPC the headless agent speaks. Behind the
# default-OFF `agent` feature — production builds ship without the RPC server.
lumen-agent = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Optional `.lss` live-reload watcher (LUMEN_WATCH_LSS): tier-1 desktop hot
# reload into the running window (C1).
notify = { workspace = true }

[features]
# Compile in the live-window agent RPC server. Off by default: a normal build has
# no dormant TCP endpoint / LUMEN_AGENT_ADDR handling and doesn't link lumen-agent.
agent = ["dep:lumen-agent", "dep:serde_json", "lumen-widgets/snapshot"]
# Forwarded tiers (T.4): consumers (the facade) decide; nothing default here
# so the lean profile can drop them.
wgpu = ["lumen-widgets/wgpu"]
snapshot = ["lumen-widgets/snapshot"]
pan-unicode = ["lumen-widgets/pan-unicode"]
