[package]
name = "lumen-style"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
lumen-layout = { workspace = true }
kurbo = { workspace = true }
serde_json = { workspace = true }
