[package]
name = "lumen-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
lumen-core = { workspace = true }
lumen-render = { workspace = true }
kurbo = { workspace = true }
# Shaping/layout (parley) + scaling/rasterization (swash), ADR-005.
parley = { workspace = true }
swash = { workspace = true }
