[package]
name = "lumen-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
# GPU backend, forwarded to lumen-render (default-on). Gates the ShaderWidget;
# `--no-default-features` drops it (build the crate directly for the effect).
default = ["wgpu"]
wgpu = ["lumen-render/wgpu"]

[dependencies]
lumen-core = { workspace = true }
lumen-render = { workspace = true }
lumen-layout = { workspace = true }
lumen-text = { workspace = true }
lumen-style = { workspace = true }
kurbo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
accesskit = { workspace = true }
