[package]
name = "lumen-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
# GPU backend, forwarded to lumen-render (default-on). Gates the ShaderWidget;
# `--no-default-features` drops it (build the crate directly for the effect).
# `snapshot` (default-on): the serializable / introspectable surfaces —
# AppSnapshot restore, `semantics_json`, `get_styles`, and the `design` import.
# Forwards to lumen-core / lumen-style; a lean GPU app builds with
# `--no-default-features --features wgpu` and drops `serde_json` app-wide.
default = ["wgpu", "snapshot"]
wgpu = ["lumen-render/wgpu"]
snapshot = ["dep:serde_json", "lumen-core/snapshot", "lumen-style/snapshot"]

[dependencies]
lumen-core = { workspace = true }
lumen-macros = { workspace = true }
lumen-render = { workspace = true }
lumen-layout = { workspace = true }
lumen-text = { workspace = true }
lumen-style = { workspace = true }
kurbo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
accesskit = { workspace = true }
